# orb

./: .dockerignore  .gitignore  Procfile  __init__.py  app.py  build_and_deploy.sh  dockerfile  fix_imports.py  fly.toml  gunicorn.conf.py  prerun.sh  pyproject.toml  requirements.txt  run.py  run_server.sh  startup.sh  test_docker_setup.sh  web.config
.cursor/rules/: .debug.mdc
.github/workflows/: build.yml  ci.yml  main_digital-being.yml
my_digital_being/: __init__.py  server.py
my_digital_being/activities/: __init__.py  activity_draw.py  activity_fetch_news.py  activity_personalized_caregiver_checkin.py  activity_personalized_caregiver_support.py  activity_personalized_emotional_checkins.py  activity_personalized_emotional_support.py  activity_post_a_tweet.py  activity_post_linkedin.py  activity_post_recent_memory_tweet.py  activity_promote_givecare_content.py
my_digital_being/framework/: main.py  secret_storage.py
my_digital_being/skills/: __init__.py  skill_generate_image.py  skill_image_generation.py  skill_lite_llm.py  skill_serper_api.py
tests/: test_http_serverloads.py  test_onboarding.py  test_onboarding_flow.py  test_server.py  test_websocket_basic.py
